include tualo pgp

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "minimum-stability": "dev",
     "require": {
         "ramsey/uuid": "*",
+        "tualo/tualopgp": "*",
         "phpseclib/phpseclib": "^3.0"
     }
 }
