--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,10 @@
     "ramsey/uuid": "~4.9.0",
     "tualo/bsc": "^1.0",
     "tualo/tualojs": "^1.0",
-    "tualo/ds": "^1.0",
+    "tualo/ds": "^1.0.6",
     "tualo/monacoeditor": "^1.0",
     "tualo/tualopgp": "^1.0",
     "phpseclib/phpseclib": "~3.0.46"
-  }
+  },
+  "version": "1.0.3"
 }
